# slocator_mcp

./: .gitignore  Dockerfile  __init__.py  app_logger.py  config.py  config_factory.py  context.py  logging_config.py  mcp_server.py  models.py  pyproject.toml
all_types/: __init__.py  internal_types.py  request_dtypes.py
core/: __init__.py  cleanup.py  handle_manager.py  session_manager.py
tools/: auth_tools.py  geospatial.py  optimize_sales_territories.py  report_template.html
tools/analysis_tools/: __init__.py  hub_analyzer.py  pharmacy_analyzer.py  plots_config.py
tools/report_tools/: __init__.py  generate_report.py  report_analysis.py
utils/: __init__.py  json_handler.py  request_models.py
