[project]
name = "mcp-server"
version = "0.1.0"
description = "Saudi Location Intelligence MCP Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core MCP and FastAPI dependencies
    "mcp>=1.0.0",
    "fastapi>=0.100.0",

    # Async I/O
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",

    # Data validation and models
    "pydantic>=2.0.0",
    "slocator-models",

    # Data processing
    "numpy>=1.24.0",

    # LangChain for AI-powered analysis
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-google-genai>=0.0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
